
0.13
    * Bread::Board
      - making the include keyword handle
        compilation errors better (doy)
          - added test for this

    * Bread::Board::Container
      Bread::Board::Container::Parameterized
      - it is now possible to store parameterized
        containers within regular containers and
        have them behave properly
          - added tests for this

0.12 Sun. April, 18, 2010
    * Bread::Board
      - added the `include` keyword which will evaluate
        an external file within your Bread::Board
        configuration
          - added tests for this
      - added support for parameterized containers
          - added tests for this
      - the 'container' keyword will now accept an
        instance of Bread::Board::Container instead
        of the name, this makes subclassing easier
          - added tests for this

    + Bread::Board::Container::Parameterized
      - added this module and tests

    + Bread::Baord::Manual
      - moved, re-organizad and added too the docs
        that were previously in Bread::Board.pm

0.11 Thu. Mar. 25, 2010
    * Much improved documentation.
    * Fixed inc/ to include all used Module-Install extensions.

0.10 Mon. Feb. 22, 2010
    * Bread::Board
      - import strict and warnings into the caller
        upon import (Florian Ragwitz)
      - fixing the SYNOPSIS so that it will actually
        run (thanks to zby for spotting this)

    * Bread::Board::ConstructorInjection
      - Add a constructor_name parameter for classes using
        MooseX::Traits or other things which need an alternately
        named constructor. (Tomas Doran)

0.09 Wed. July 29, 2009
    Add cloning support for containers and services
    (thanks to jrockway for this)
      - adding tests for this

    * Bread::Board::ConstructorInjection
      - use meta->constructor_name instead of "new"
        if possible (jrockway)

    * Bread::Board::Service::WithParameters
      - fixing a leak where we would hold onto